[gd_scene load_steps=7 format=2]

[ext_resource path="res://Fonts/BRADHITC.TTF" type="DynamicFontData" id=1]
[ext_resource path="res://Scripts/Item.gd" type="Script" id=2]
[ext_resource path="res://Scripts/useButton.gd" type="Script" id=3]
[ext_resource path="res://Graphics/Square.png" type="Texture" id=4]
[ext_resource path="res://icon.png" type="Texture" id=5]

[sub_resource type="DynamicFont" id=1]
size = 20
font_data = ExtResource( 1 )

[node name="Item1" type="TextureButton"]
margin_right = 64.0
margin_bottom = 64.0
mouse_filter = 2
texture_normal = ExtResource( 5 )
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="marker" type="Sprite" parent="."]
position = Vector2( 32, 32 )
scale = Vector2( 0.15625, 0.15625 )
texture = ExtResource( 4 )

[node name="interact" type="TextureButton" parent="."]
margin_left = 24.0
margin_top = 48.0
margin_right = 72.0
margin_bottom = 80.0
focus_neighbour_top = NodePath("..")
mouse_filter = 2
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="interact"]
margin_left = -8.0
margin_top = 6.0
margin_right = 48.0
margin_bottom = 32.0
color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RichTextLabel" type="RichTextLabel" parent="interact"]
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = -48.0
margin_top = -12.0
margin_bottom = 12.0
custom_fonts/normal_font = SubResource( 1 )
custom_colors/default_color = Color( 1, 1, 1, 1 )
text = "Use"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="marker" type="Sprite" parent="interact"]
position = Vector2( 20.0001, 19 )
scale = Vector2( 0.109375, 0.0507812 )
texture = ExtResource( 4 )

[connection signal="button_up" from="." to="." method="_on_Item1_button_up"]
[connection signal="focus_entered" from="." to="." method="_on_Item1_focus_entered"]
[connection signal="focus_exited" from="." to="." method="_on_Item1_focus_exited"]
[connection signal="button_up" from="interact" to="interact" method="_on_interact_button_up"]
[connection signal="focus_entered" from="interact" to="interact" method="_on_interact_focus_entered"]
[connection signal="focus_exited" from="interact" to="interact" method="_on_interact_focus_exited"]
